# discord-support-threads-bot

./: .env_template  .yamllint.yml  Cargo.toml  Procfile  README.md  sqlx-data.json
.github/workflows/: code_checks.yml  register-slash-commands.yml
db/: 2022-01-16_u_init.sql  2022-06-19_d_drop-prefix-column.sql  2022-06-19_u_drop-prefix-column.sql  schema.sql
src/: commands.rs  db.rs  dm.rs  main.rs
src/commands/: help.rs  set_command_prefix.rs  set_support_channel.rs  support.rs  support_channel.rs
