[package]
name = "discord_support_thread_bot"
version = "0.1.0"
authors = ["Aaron Liblong <liblonga@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "*"
dotenv = "*"
