[package]
name = "discord_support_threads_bot"
version = "0.1.0"
authors = ["Aaron Liblong <liblonga@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "*", default-features = false, features = ["cache", "client", "gateway", "framework", "standard_framework", "rustls_backend", "model", "unstable_discord_api", "utils"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "*", features = ["derive"] }
dotenv = "*"
unicode-segmentation = "*"
sqlx = { version = "*", features = ["postgres", "runtime-tokio-rustls"] }
anyhow = "*"
thiserror = "*"
const_format = "*"
